Aplicando fetch api

--- a/index.html
+++ b/index.html
@@ -17,15 +17,10 @@
     <nav class="nav">
         <br>
         <ul id="enlaces">
-            <li>
-                <button id="boton"><a href="https://kungfucoding23.github.io/Coleccion-de-Libros/">Coleccion de Libros</a></button>
-            </li>
-            <li>
-                <button id="boton"><a href="https://kungfucoding23.github.io/Lista/">Tweets</a></button>
-            </li>
-            <li>
-                <button id="boton"><a href="https://kungfucoding23.github.io/Gasto-Semanal/">Gasto Semanal</a></button>
-            </li>
+            <button id="btn" class="proyecto">Proyectos</button>
+            <div>
+                <div id="resultado"></div>
+            </div>
             <br>
         </ul>
     </nav>
@@ -34,9 +29,9 @@
         <p id="presentacion">Mi nombre es Alejandro, soy estudiante de Ingenieria Informatica y programación de manera autodidacta. <br> Aqui subiré todos mis proyectos
         </p>
     </article>
-    <footer><a href="https://github.com/Kungfucoding23">Ingresa a mi cuenta Github aqui</a></footer>
+    <footer><a href="https://github.com/Kungfucoding23" target="_blank">Ingresa a mi cuenta Github aqui</a></footer>
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
